--- a/products/templates/includes/home/Recommended.html
+++ b/products/templates/includes/home/Recommended.html
@@ -38,7 +38,7 @@ Trending courses START -->
             <!-- Hover element -->
             <div class="card-img-overlay">
               <div class="card-element-hover d-flex justify-content-end">
-                <form method="post" action="{% url 'orders:cart_add' product.id %}">
+                <form method="post" action="{% url 'orders:add_to_cart' product.id %}">
                   {% csrf_token %}
                   <input type="hidden" name="quantity" value="1">
                   <button type="submit" class="icon-md bg-white rounded-circle text-center border-0">
@@ -57,7 +57,8 @@ Trending courses START -->
             <!-- Badge and Price -->
             <div class="d-flex justify-content-between align-items-center mb-0">
               {% if product.category %}
-                <a href="{% url 'products:category_detail' slug=product.category.slug %}" class="badge bg-info bg-opacity-10 text-info me-2">
+                {% comment %} <a href="{% url 'products:category_detail' slug=product.category.slug %}" class="badge bg-info bg-opacity-10 text-info me-2"> {% endcomment %}
+                <a href="" class="badge bg-info bg-opacity-10 text-info me-2">
                   <i class="fas fa-circle small fw-bold"></i> {{ product.category.name }}
                 </a>
               {% endif %}
