--- a/orders/templates/orders/cart_detail.html
+++ b/orders/templates/orders/cart_detail.html
@@ -170,9 +170,10 @@
                                 </div>
 
                                 <div class="d-grid gap-2">
-                                    <a href="" class="btn btn-primary btn-lg">
-                                        ادامه خرید
+                                    <a href="{% url 'orders:checkout' %}" class="btn btn-primary btn-lg">
+                                        <i class="fas fa-credit-card me-2"></i>ادامه خرید و تکمیل سفارش
                                     </a>
+
                                     <form method="post" action="{% url 'orders:clear_cart' %}" class="mt-2">
                                         {% csrf_token %}
                                         <button type="submit" 
